Spacing and closing Div

--- a/france.html
+++ b/france.html
@@ -14,7 +14,7 @@
                 <a href="index.html">Home</a>
                 <a href="Italy.html">Italy</a>
                 <a href="Spain.html">Spain</a>
-                <a href="France.html"class="active">France</a>
+                <a href="France.html" class="active">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
@@ -106,6 +106,7 @@
               <h4>Column 2</h4>
               <p>Some text..</p>
             </div>
+          </div>
 
     </article>
 
