--- a/spain.html
+++ b/spain.html
@@ -13,7 +13,7 @@
         <nav class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
                 <a href="Italy.html">Italy</a>
-                <a href="Spain.html"class="active">Spain</a>
+                <a href="Spain.html" class="active">Spain</a>
                 <a href="France.html">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
@@ -106,6 +106,7 @@
               <h4>Column 2</h4>
               <p>Some text..</p>
             </div>
+          </div>
 
     </article>
     <footer class="footer">
