--- a/italy.html
+++ b/italy.html
@@ -11,7 +11,7 @@
 <body>
         <nav class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
-                <a href="Italy.html"class="active">Italy</a>
+                <a href="Italy.html" class="active">Italy</a>
                 <a href="Spain.html">Spain</a>
                 <a href="France.html">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -104,6 +104,7 @@
               <h4>Column 2</h4>
               <p>Some text..</p>
             </div>
+          </div>
 
       </article>
       <footer class="footer">
