--- a/italy.html
+++ b/italy.html
@@ -64,16 +64,16 @@
 
           <div class="row">
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
+              <h4>Art</h4>
+              <p>In Florence I visited the Galleria dell' Accademia which is where the Statue of David by Michelangelo is. The statue is much bigger than I thought it would be and it towered over everyone in the room. It was in a room by itself and there were some art students sketching near it but staring at art isn’t really my thing.</p>
             </div>
             <div class="column" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
+              <h4>Architecture</h4>
+              <p>In Florence I was able to see some canals which I thought looked nice to ride through since it was the middle of summer and extremely hot outside. I also got see some square-shaped buildings tucked into the side of mountains in the Italian countryside which looked beautiful yet dangerous.</p>
             </div>
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 3</h4>
-              <p>Some text..</p>
+              <h4>Food</h4>
+              <p>I ate plenty of pasta while in Italy. Most of the pasta dishes I ate were rich and covered in a creamy, cheesy sauce. I also tried plenty of gelato from street vendors and yet I still don’t really know what gelato actually is. Overall, the food was great, unless you’re trying to stick to a diet.</p>
             </div>
           </div>
 
@@ -97,12 +97,12 @@
 
           <div class="row2">
             <div class="column2" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
+              <h4>Pompeii</h4>
+              <p>I visited the destroyed city of Pompeii. It was a surreal experience because it was a place I had learned about in my art history classes so it was more of a concept to me than a reality. It seemed so advanced for something built so long ago, though a lot of old places feel like that. There were people preserved in ash and placed in glass boxes that tourists could look at it. I didn’t like that part of the experience.</p>
             </div>
             <div class="column2" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
+              <h4>Cannes</h4>
+              <p>I visited the city of Cannes which is where the famous film festival is held every year. I went to a perfume factory there and mixed my own perfume. I went for floral scents and ended up naming my creation, “Juno’s Glory.” The name has no meaning but I thought it sounded nice. It had to sit in darkness for a few weeks before I got the chance to smell the final product and now I keep the bottle as a decorative item on my shelf back home. </p>
             </div>
           </div>
 
