--- a/france.html
+++ b/france.html
@@ -65,16 +65,16 @@
 
           <div class="row">
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
+              <h4>Art</h4>
+              <p>In Paris, I visited the Louvre. It was incredibly large and very crowded. I’m not sure how to look at art so I didn’t spend much time in any one room. I did like the sculpture garden they have which shows European sculptures of people under a skylight. </p>
             </div>
             <div class="column" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
+              <h4>Architecture</h4>
+              <p>Also in Paris, I went to the top of the Eiffel Tower. It gave an excellent view of the city. Unfortunately that day a bomb threat had been called in and everyone had to evacuate from the tower while authorities decided if the threat was credible. Everything turned out okay. </p>
             </div>
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 3</h4>
-              <p>Some text..</p>
+              <h4>Food</h4>
+              <p>I tried many macarons and chocolates while in Paris. Their macarons tasted like perfume and their chocolates were very rich. The chocolates were nothing like the typical milk chocolate I’m used to. They had specialty shops that had chocolates with all sorts of fun fillings.</p>
             </div>
           </div>
 
@@ -97,16 +97,6 @@
             </div>
           </div>
 
-          <div class="row2">
-            <div class="column2" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
-            </div>
-            <div class="column2" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
-            </div>
-          </div>
 
     </article>
 
