--- a/spain.html
+++ b/spain.html
@@ -65,16 +65,16 @@
 
           <div class="row">
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
+              <h4>Caves</h4>
+              <p>In a city in Spain they had underground caves that tourists could climb through. There were lights inside illuminating all the stalagmites and it all looked very cool. At the end of the caves there was a body of water and seats where I watched a live orchestra show.</p>
             </div>
             <div class="column" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
+              <h4>Scooter Tour</h4>
+              <p>In Barcelona, I sped around the city on an electric scooter to look at all the buildings. I saw a castle, a cactus garden, the Olympic Stadium, and other things. The architecture was much different than that of Italy and France but they were all beautiful look at.</p>
             </div>
             <div class="column" style="background-color:#92c5ea;">
-              <h4>Column 3</h4>
-              <p>Some text..</p>
+              <h4>Architecture</h4>
+              <p>There was definitely more color in Spain in the architecture than other places I have visited before.  That was mostly due the mosaic I saw in so many places in Spain. The colored tiles placed together to make a picture were interesting to look at and I brought home some mosaic souvenirs. </p>
             </div>
           </div>
 
@@ -97,16 +97,6 @@
             </div>
           </div>
 
-          <div class="row2">
-            <div class="column2" style="background-color:#92c5ea;">
-              <h4>Column 1</h4>
-              <p>Some text..</p>
-            </div>
-            <div class="column2" style="background-color:#004780;">
-              <h4>Column 2</h4>
-              <p>Some text..</p>
-            </div>
-          </div>
 
     </article>
     <footer class="footer">
