--- a/france.html
+++ b/france.html
@@ -12,9 +12,9 @@
 <body>
         <nav class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
-                <a href="Italy.html">Italy</a>
-                <a href="Spain.html">Spain</a>
-                <a href="France.html" class="active">France</a>
+                <a href="italy.html">Italy</a>
+                <a href="spain.html">Spain</a>
+                <a href="france.html" class="active">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
