--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body class=homepage>
         <nav class="topnav" id="myTopnav">
                 <a href="index.html" class="active">Home</a>
-                <a href="Italy.html">Italy</a>
-                <a href="Spain.html">Spain</a>
-                <a href="France.html">France</a>
+                <a href="italy.html">Italy</a>
+                <a href="spain.html">Spain</a>
+                <a href="france.html">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
