--- a/spain.html
+++ b/spain.html
@@ -12,9 +12,9 @@
 <body>
         <nav class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
-                <a href="Italy.html">Italy</a>
-                <a href="Spain.html" class="active">Spain</a>
-                <a href="France.html">France</a>
+                <a href="italy.html">Italy</a>
+                <a href="spain.html" class="active">Spain</a>
+                <a href="france.html">France</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
